Changed Design of Home and functionalities. Changed Calender Function Design

--- a/app/src/main/assets/impressum.html
+++ b/app/src/main/assets/impressum.html
@@ -6,7 +6,7 @@ Frankfurt am Main<br />
 E-Mail info@srkm.de<br />   
 Tel 015754488645<br /> </p>
 Geschäftsführer
-<p>Khalid Butt, Sana Hussein, Rieaz Rostami, Meike Thomsen<br /></p><p>Registergericht: Amtsgericht Frankfurt am Main ,  HRB786</p><p>Ust-IdNr: DE123456786</p><strong>
+<p>Khalid Butt, Sana Hussain, Rieaz Rostami, Meike Thomsen<br /></p><p>Registergericht: Amtsgericht Frankfurt am Main ,  HRB786</p><p>Ust-IdNr: DE123456786</p><strong>
 Haftung für Inhalte</strong><p>
 Die Inhalte unserer Seiten wurden mit größter Sorgfalt erstellt. Für die Richtigkeit, 
 Vollständigkeit und Aktualität der Inhalte können wir jedoch keine Gewähr übernehmen. 
